fix more text on blog

--- a/src/components/BlogPage/terry-sso/terry-sso1.mdx
+++ b/src/components/BlogPage/terry-sso/terry-sso1.mdx
@@ -314,25 +314,32 @@ We'll redirect the user to the login screen with a reference to the unique ident
   of the session.
 
 <Code language="rust">
-{`
-#[derive(Debug, Deserialize)]
+{`#[derive(Debug, Deserialize)]
 pub struct AuthorizeParams {
     challenge: String,
     callback_url: String,
-    // TODO add scopes and audience
+    audience: String,
+    scopes: String,
 }
-     
+  
 async fn redir_to_login(req: HttpRequest) -> HttpResponse {
     let params = web::Query::<AuthorizeParams>::from_query(req.query_string()).unwrap();
-  
     let session_id = Uuid::new_v4().to_string();
-    dao::store_session(&session_id, &params.challenge, &params.callback_url).await;
+    dao::store_session(
+        &session_id,
+        dao::Session {
+            challenge: params.challenge.clone(),
+            callback_url: params.callback_url.clone(),
+            audience: params.audience.clone(),
+            scopes: params.scopes.clone(),
+        },
+    )
+    .await;
     let redirect_location = format!("http://localhost:1234?session_id={}", session_id,);
     HttpResponse::Found()
         .header("Location", redirect_location)
         .finish()
-}
-`}
+}`}
 </Code>
 
 Thhe code to start this flow from the browser looks like this:
@@ -340,16 +347,21 @@ Thhe code to start this flow from the browser looks like this:
 <Code language="typescript">
 {`type LoginParams = {
   callbackUrl: string;
+  audience?: string;
+  scopes?: string[];
 };
   
 export async function doLogin(params: LoginParams) {
   // store the verifier in the cookie for later use.
   // It expires in 5 minutes, hopefully it doesn't take that long for users to type their password etc.
   const verifier = new Verifier();
-  document.cookie = \`terry_auth=\${verifier}; \${new Date(new Date().getTime() + 300_000)}; path=/\`;
+  document.cookie = \`terry_auth=\${verifier}; new Date(new Date().getTime() + 300_000); path=/\`;
   
   const challenge = await verifier.getChallenge();
-  window.location = \`http://localhost:4000/oauth2/authorize?challenge=\${challenge}&callback_url=\${params.callbackUrl}\`; 
+  let queryString = \`challenge=\${challenge}&callback_url=\${params.callbackUrl}\`;
+  queryString += \`&audience=\${params.audience ?? ''}\`;
+  queryString += \`&scopes=\${params.scopes?.join(',') ?? ''}\`;
+  window.location = \`http://localhost:4000/oauth2/authorize?\${queryString}\`;
 }
 `}
 </Code>
@@ -511,7 +523,7 @@ async fn handle_login(params: web::Form::<PasswordFormValues>) -> HttpResponse {
         return HttpResponse::Found().header("Location", location).finish();
     }
     let session = session_op.unwrap();
-
+  
     // check if the password is valid ...
     if !is_valid_password(&params).await {
         let location = format!(
@@ -520,10 +532,30 @@ async fn handle_login(params: web::Form::<PasswordFormValues>) -> HttpResponse {
         );
         return HttpResponse::Found().header("Location", location).finish();
     }
-
-    // TODO need to handle the business logic around not allowed scopes
-    // and audiences here`
-
+  
+    // check that the user has requested allowed scopes
+    let allowed_scopes = dao::get_allowed_scopes(&params.username);
+    let mut not_allowed_scope_requested = false;
+    session.scopes.split(",")
+        .for_each(|scope| {
+            not_allowed_scope_requested |= !allowed_scopes.contains(&scope.to_string());
+        });
+    if not_allowed_scope_requested {
+        let callback_url = format!("{}?error=not_allowed_scopes", session.callback_url.clone());
+        return HttpResponse::Found()
+            .header("Location", callback_url)
+            .finish();
+    }
+  
+    // check that the audience is allowed
+    let audience_restrictions = dao::get_audience_restrictions(&params.username);
+    if audience_restrictions.is_some() && !audience_restrictions.unwrap().contains(&session.audience) {
+        let callback_url = format!("{}?error=not_allowed_audience", session.callback_url.clone());
+        return HttpResponse::Found()
+            .header("Location", callback_url)
+            .finish();
+    }
+  
     // store the code and redirect user w/ code
     let code = format!("{}", Uuid::new_v4());
     dao::store_code(&code, &params.username, &params.session_id).await;
@@ -532,14 +564,14 @@ async fn handle_login(params: web::Form::<PasswordFormValues>) -> HttpResponse {
         .header("Location", callback_url)
         .finish()
 }
-  
+   
 /// check that the user supplied valid credentials
 /// don't do like this irl - it's not a very smart way to check creds
 async fn is_valid_password(params: &web::Form::<PasswordFormValues>) -> bool {
   let valid_credentials: bool;
   let password = dao::get_password(&params.username).await;
   println!("{:?}", password);
-  
+   
   if matches!(password, None) {
     valid_credentials = false; // no user found
   } else {
@@ -580,14 +612,90 @@ export default function Error(props: ErrorProps) {
 `}
 </Code>
 
-```
-TODO need to handle the final error state in the front-end
-```
+We'll be handling the other error states later on.
 
-TODO continue on to write about the token exchange
+## Phase Three
+
+In the third phase of our oauth flow, we have been redirected to the callback url and 
+  we are ready to exchange the code for the token.
+From the client's perspective,
+  this is a relatively simple procedure.
+We just send the code to the server, along with the verifier we created during phase one.
+Recall, the verifier was stored in a cookie!
+
+<Code language="typescript">
+{`
+type ExchangeCodeParams = {
+  code: string;
+};
+  
+type ExchangeCodeResponse = {
+  access_token: string;
+  id_token: string;
+};
+  
+export async function exchangeCode(
+  params: ExchangeCodeParams
+): ExchangeCodeResponse {
+  const verifier = getVerifierFromCookie(document.cookie);
+  const response = await fetch('http://localhost:4000/oauth2/token', {
+    method: 'POST',
+    headers: { 'content-type': 'application/json' },
+    body: JSON.stringify({ code: params.code, verifier })
+  });
+  const result = await response.json();
+  return result;
+}
+  
+function getVerifierFromCookie(cookie): string {
+  const verifier = cookie
+    .split(';')
+    .map((s) => s.trim())
+    .find((c) => c.startsWith('terry_auth'))
+    .replace('terry_auth=', '');
+  return verifier;
+}
+`}
+</Code>
+
+Then we invoke this function on our callback page:
+<Code language="typescript">
+{`
+import * as sdk from 'terry-spa-sdk';
+  
+let token = '';
+  
+(async function () {
+  if (!window.location.pathname.startsWith('/callback')) {
+    return;
+  }
+  
+  const params = new URLSearchParams(window.location.search);
+  const code = params.get('code');
+  const error = params.get('error');
+  if (error) {
+    handleError(error);
+  } else {
+    const result = await sdk.exchangeCode({ code });
+    token = result.access_token;
+  }
+})();
+  
+async function handleError(error) {
+  console.error(error);
+  document.addEventListener('DOMContentLoaded', function () {
+    const errorContainer = document.getElementById('error');
+    errorContainer.innerText = 'An error occurred';
+  });
+}
+`}
+</Code>
+
 
 ## Bibliography / Further Reading
 - [_PKCE: What and Why?_ ](https://dropbox.tech/developers/pkce--what-and-why-#:~:text=%E2%80%9CPKCE%20(RFC%207636)%20is,to%20access%20their%20Dropbox%20data.)
 - [OAuth.net Impllicit Grant Page](https://oauth.net/2/grant-types/implicit/)
   including a great [youtube video](https://www.youtube.com/watch?v=CHzERullHe8) about why you should prefer PKCE
-- [The original Oauth2 spec for PKCE] (https://oauth.net/2/pkce/)
+- [The original Oauth2 spec for PKCE](https://oauth.net/2/pkce/)
+- [OpenID Connect Guide](https://auth0.com/docs/authenticate/protocols/openid-connect-protocol)
+- [OpenID Connect Scopes](https://openid.net/specs/openid-connect-basic-1_0.html#Scopes)
